syntax = "proto3";

package ci.tasklets.misc.sleep;
option go_package = "a.yandex-team.ru/ci/tasklet/registry/common/misc/sleep/proto;sleeppb";

import "ci/tasklet/common/proto/service.proto";
import "tasklet/api/tasklet.proto";

// Main config
message Config {
    string sleep_time = 1;
    string jitter_time = 2;

    int32 execution_time_ms = 3 [deprecated = true];
}


message Input {
    ci.TaskletContext context = 1;
    Config config = 2;
}

message Output {
}
